<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Rm6qvbfNDPMovWCHWTA4UP9XxPu8GqtKE07WBSIi</string>
    <string name="back4app_client_key">SSqxCFgQ7PUkEVt6QIjY6GDHxCm3PSIR5DgnG5DG</string>
    <string name="editText_hint_username">Username</string>
    <string name="editText_hint_email">Email</string>
    <string name="editText_hint_password">Password</string>
    <string name="editText_hint_confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_login">login</string>
    <string name="tab_users">Users</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_share_pictures">Share photos</string>
    <string name="profile_name">Name :</string>
    <string name="profile_bio">Bio :</string>
    <string name="profile_profession">Profession :</string>
    <string name="profile_hobbies">Hobbies :</string>
    <string name="profile_favorite_sports">Favorite sports :</string>
    <string name="button_update_profile">Update</string>
    <string name="textView_loading">Loading</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="post_image">Post Image</string>
    <string name="logout">Logout</string>
</resources>